tests/builtins/__snapshots__/jsfmt.spec.js.snap
exports[`test array.js 1`] = `
"var a = [\"...\"];
var b = a.map (function (x) { return 0; });
var c: string = b[0]; // error: number !~> string

var array = [];
function f() {
    array = array.map (function () { return \"...\"; });
    var x:number = array[0]; // error: string !~> number
}

var Foo = require(\'./genericfoo\');
var foo = new Foo();
function g() {
    var foo1 = foo.map (function() { return \"...\"; });
    var x:number = foo1.get(); // error: string !~> number
    foo = foo1;
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
var a = [ \"...\" ];
var b = a.map(
  function(x) {
    return 0;
  }
);
var c: string = b[0];// error: number !~> string
var array = [  ];
function f() {
  array = array.map(
    function() {
      return \"...\";
    }
  );
  var x: number = array[0];// error: string !~> number
}
var Foo = require(\"./genericfoo\");
var foo = new Foo();
function g() {
  var foo1 = foo.map(
    function() {
      return \"...\";
    }
  );
  var x: number = foo1.get();// error: string !~> number
  foo = foo1;
}

"
`;

exports[`test genericfoo.js 1`] = `
"class Foo<T> {
    x:T;
    self():Foo<T> { return this; }
    map<U>(callbackfn: () => U): Foo<U> { return new Foo(); }
    set(x:T): void { }
    get(): T { return this.x; }
}

module.exports = Foo;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/src/printer.js:1497
        fromString(\", \").join(path.map(print, \"params\")),
                         ^

TypeError: fromString(...).join is not a function
    at genericPrintNoParens (/src/printer.js:1497:26)
    at genericPrint (/src/printer.js:166:7)
    at p (/src/printer.js:111:37)
    at exports.printComments (/src/comments.js:327:20)
    at printGenerically (/src/printer.js:111:12)
    at FastPath.call (/src/fast-path.js:113:16)
    at genericPrintNoParens (/src/printer.js:1172:16)
    at genericPrint (/src/printer.js:166:7)
    at p (/src/printer.js:111:37)
    at exports.printComments (/src/comments.js:327:20)
"
`;
